# AgenticLanggraph-Practice

./: pyproject.toml  requirements.txt
1-BasicChatbot/: 1-basicchatbot.ipynb  humanintheloop.ipynb
Debugging/: agent.py  debugging.ipynb  langgraph.json
Debugging/.langgraph_api/: .langgraph_ops.pckl
MCP/: client.py  mathserver.py  weather.py
